BindingEnvironment set value on parent if it is ObjectEnvironment and name is defined in object
LocalBindingEnvironment set value on parent if it is not null and not local defined
GlobalCommand with tests
global support in Parser
IBindingEnvironment.DefineGlobal with tests
New file test: Global.ajs

2010-01-10
IReference
IChannel
Channel implements IChannel, IReference
SetValueCommand, GetValueExpression
AjSharp now translate <- to SetValueCommand or GetValueExpression
Future implementation with tests

2010-01-17
QueueChannel with tests
QueueChannel in AjSharp machine
PrimesWithQueueChannels.ajsp in AjSharp.Console examples
Implementing functional examples in tests: 
FunctionalRunningSum.ajs, FunctionalRunningSumParam.ajs,
FunctionalCall
Call in Function
Invoke method in IObject, DynamicObject

2010-02-10
DefineAgentCommand
AgentFunction
agent keyword in Parser with tests

2010-02-11
Invoke AgentFunction
AgentObject: Launch, channel, SendInvoke, Execute
AgentClass new instance
AgentCall.ajs first example

2010-02-13
default keyword in class methods
Support for IsDefault in Function
Default method invocation in Dynamic Classic objects

2010-02-14
Support for calling native methods on DynamicObject, DynamicClassicObject
New examples with default method: DefaultMethodProxy.ajs, DefaultMethodLoadBalancer.ajs
New example with agents: AgentChain.ajs

2010-02-15
.. and ... operators in Lexer
New example with agents: AgentCollatz.ajs

2010-02-15
... operators in Parser as in func(par1, pars...)

2010-02-20
Variable parameters fun(pars...)
Splat invocation: myfun(1,pars...,2);

2010-02-21
WebCrawler.ajs in AjSharp.Console
Test Retrive Enum value from Type
Fix GetIndexedValue to support default properties

2010-02-28
Adding Foo["AProperty"] access with tests
Adding Foo["AFunction"](par1, par2) with tests
ObjectArrayAccess.ajs test example

2010-03-07
[STAThread] Added to main in AjSharp.Console
WatiN Google example in AjSharp.Examples

2010-03-14
Updated Wat.ajs example