@@ -43,6 +43,7 @@
     <Compile Include="BindingEnvironmentTest.cs" />
     <Compile Include="ChannelTests.cs" />
     <Compile Include="CommandsTests.cs" />
+    <Compile Include="HostTests.cs" />
     <Compile Include="QueueChannelTests.cs" />
     <Compile Include="DynamicClassTests.cs" />
     <Compile Include="DynamicObjectTests.cs" />
